Update a config file.

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 name: Railsの教科書
 markdown: redcarpet
-pygments: true
+highlighter: pygments
 permalink: /:title.html
 # for static pages
 baseurl: /rails_textbook
