add a rule: 尚->なお

--- a/prh.yml
+++ b/prh.yml
@@ -77,6 +77,9 @@ rules:
   - expected: ちょうど
     pattern:  丁度
     prh: 漢字で書かず、ひらがなで書くと読みやすくなります
+  - expected: なお、
+    pattern:  尚、
+    prh: 漢字で書かず、ひらがなで書くと読みやすくなります
 
   # 本文中の半角スペースは排除したい
 
