--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@ _figures/scripts/screenshots/books_app/screenshots/
 _figures/scripts/screenshots/helloworld/helloworld/
 _figures/scripts/screenshots/helloworld/screenshots_org/
 _figures/scripts/screenshots/helloworld/screenshots/
+
+_review/images/
