--- a/prh.yml
+++ b/prh.yml
@@ -35,9 +35,9 @@ rules:
   - expected: 他の
     pattern:  ほかの
     prh: ひらがなで書かず、漢字で書くと読みやすくなります
-  - expected: 分かる
-    pattern:  わかる
-    prh: ひらがなで書かず、漢字で書くと読みやすくなります
+  - expected: わかる
+    pattern:  分かる
+    prh: 漢字で書かず、ひらがなで書くと読みやすくなります
   - expected: きれい
     pattern:  綺麗
     prh: 漢字で書かず、ひらがなで書くと読みやすくなります
