--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@ _figures/scripts/screenshots/helloworld/screenshots_org/
 _figures/scripts/screenshots/helloworld/screenshots/
 
 _review/images/
+_review/contents/
+
