--- a/_review/config.yml
+++ b/_review/config.yml
@@ -32,9 +32,10 @@ subtitle: |-
 
 # 著者名。「, 」で区切って複数指定できる
 # 読みを入れる例 aut: [{name: "青木峰郎", file-as: "アオキミネロウ"}, {name: "武藤健志", file-as: "ムトウケンシ"}, {name: "高橋征義", file-as: "タカハシマサヨシ"}, {name: "角征典", file-as: "カドマサノリ"}]
-aut:
-  - name:    五十嵐邦明
-    file-as: イガラシクニアキ
+aut: ["五十嵐邦明 ガーネットテック373株式会社 / twitter: igaiga555"]
+dsr: ["becolomochi / twitter: becolomochi"]
+pbl: Ruby超入門オブジェクトさんファンクラブ
+prt: 日光企画
 
 # 以下はオプション
 # 以下はオプション(autと同じように配列書式で複数指定可能)。
@@ -65,7 +66,6 @@ aut:
 # a-pht, pht: 撮影責任者
 # a-pbl, pbl: 出版社（発行所）
 # a-prt, prt: 印刷所
-prt: 日光企画
 # a-red, red: 項目の枠組起草者
 # a-rev, rev: 評論者
 # a-spn, spn: 援助者
@@ -79,11 +79,11 @@ date: 2020-02-29
 # 複数指定する場合は次のように記述する
 # [["初版第1刷の日付", "初版第2刷の日付"], ["第2版第1刷の日付"]]
 # 日付の後ろを空白文字で区切り、任意の文字列を置くことも可能。
-history: [["2020-02-29 ver 1.0"]]
+history: [["2020-02-29 技術書典8 v2.0.0", "2016-03-31 初版 v0.9.0"]]
 # [experimental] 新刊を頒布したイベント名（例：「技術書典6（2019年春）新刊」）
 pubevent_name: 技術書典8
 # 権利表記(配列で複数指定可)
-rights: (C) 2020 五十嵐邦明
+rights: (C) 2016-2020 五十嵐邦明, becolomochi
 # description: 説明
 # subject: 短い説明用タグ(配列で複数指定可)
 # type: 書籍のカテゴリーなど(配列で複数指定可)
