--- a/_review/Gemfile
+++ b/_review/Gemfile
@@ -1,4 +1,7 @@
-source 'https://rubygems.org'
+source "https://rubygems.org"
 
-gem 'rake'
-gem 'review', '2.5.0'
+gem "rake"
+gem "review", "2.5.0"
+
+# Convert markdown to re
+gem "md2review"
