--- a/_review/config.yml
+++ b/_review/config.yml
@@ -79,7 +79,7 @@ date: 2022-01-22
 # 複数指定する場合は次のように記述する
 # [["初版第1刷の日付", "初版第2刷の日付"], ["第2版第1刷の日付"]]
 # 日付の後ろを空白文字で区切り、任意の文字列を置くことも可能。
-history: [["2022-01-22 v2.1.0 Ruby 3.1.0 Rails 7.0.1 技術書典12", "2020-02-29 v2.0.0 Ruby 2.7.0 Rails 6.0.2.1 技術書典8", "2017-08-20 v1.2.0 Ruby 2.4.1 Rails 5.1.2", "2016-07-26 v1.0.0 Ruby 2.3.1 Rails 5.0.0", "2016-03-31 v0.9.0 Ruby 2.3.0 Rails 5.0.0beta3 初版"]]
+history: [["2022-01-24 v2.1.1 読みやすく調整", "2022-01-22 v2.1.0 Ruby 3.1.0 Rails 7.0.1 技術書典12", "2020-02-29 v2.0.0 Ruby 2.7.0 Rails 6.0.2.1 技術書典8", "2017-08-20 v1.2.0 Ruby 2.4.1 Rails 5.1.2", "2016-07-26 v1.0.0 Ruby 2.3.1 Rails 5.0.0", "2016-03-31 v0.9.0 Ruby 2.3.0 Rails 5.0.0beta3 初版"]]
 # [experimental] 新刊を頒布したイベント名（例：「技術書典6（2019年春）新刊」）
 pubevent_name: 技術書典12
 # 権利表記(配列で複数指定可)
