設定ファイル更新

--- a/_review/config.yml
+++ b/_review/config.yml
@@ -6,7 +6,7 @@
 
 # この設定ファイルでサポートするRe:VIEWのバージョン番号。
 # major versionが違うときにはエラーを出す。
-review_version: 2.0
+review_version: 5.0
 
 # ほかの設定ファイルの継承を指定できる。同じパラメータに異なる値がある場合は、
 # 呼び出し元の値が優先される。
@@ -15,7 +15,6 @@ review_version: 2.0
 # その値がB.ymlよりも優先される。
 # 同様にA.yml、B.yml内でさらにinherit:パラメータを使うこともできる。
 # inherit: ["A.yml", "B.yml"]
-inherit: ["config-starter.yml"]
 
 # ブック名(ファイル名になるもの。ASCII範囲の文字を使用)
 bookname: mybook
@@ -141,13 +140,13 @@ toc: true
 
 # 表紙にするHTMLファイル。ファイル名を指定すると表紙として入る
 # cover: null
-cover: cover_omote.tex
+# cover: cover_omote.tex
 #
 # 表紙に配置し、書籍の影絵にも利用する画像ファイル。省略した場合はnull (画像を使わない)。画像ディレクトリ内に置いてもディレクトリ名は不要(例: cover.jpg)
 #coverimage: cover.jpg
 #
 # 表紙の後に大扉ページを作成するか。省略した場合はtrue (作成する)
-titlepage: true
+titlepage: false
 #
 # 自動生成される大扉ページを上書きするファイル。ファイル名を指定すると大扉として入る (PDFMaker向けにはLaTeXソース断片、EPUBMaker向けにはHTMLファイル)
 # titlefile: null
@@ -163,7 +162,6 @@ titlepage: true
 
 # 裏表紙データファイル (PDFMaker向けにはLaTeXソース断片、EPUBMaker向けにはHTMLファイル)
 # backcover: null
-backcover: cover_ura.tex
 
 # プロフィールページファイル  (PDFMaker向けにはLaTeXソース断片、EPUBMaker向けにはHTMLファイル)。ファイル名を指定すると著者紹介として入る
 # profile: null
@@ -289,25 +287,31 @@ epubmaker:
   #
   # EPUBで表紙をコンテンツに含めるか。デフォルトでは作成されない。yesにするとiBooks等でも最初に表紙が表示されるようになる
   # cover_linear: null
+  cover_linear: true
   #
   # @<href>タグでの外部リンクを禁止し、地の文にする(falseで禁止する)
   # externallink: true
   #
+  # その他設定追加:
+  coverimage: rails_textbook_cover_omote.png
+  backcover: backcover.xhtml
+  #
   # epubmaker:階層を使うものはここまで
 
 # LaTeX用のスタイルファイル(styディレクトリ以下に置くこと)
-texstyle: [reviewmacro, starter, mystyle, mytitlepage, mycolophon]
+# texstyle: [reviewmacro, starter, mystyle, mytitlepage, mycolophon]
 #
 # LaTeX用のdocumentclassを指定する
 # texdocumentclass: ["jsbook", "uplatex,oneside"]
-texdocumentclass: ["jsbook",
+texdocumentclass: ["review-jsbook", "media=ebook,paper=b5,serial_pagination=true,openany,fontsize=10pt,baselineskip=15.4pt,line_length=44zw,number_of_lines=38,head_space=30mm,headsep=10mm,headheight=5mm,footskip=10mm"]
+
+# texdocumentclass: ["review-jsbook", "papersize,oneside,paper=b5,fontsize=10pt,openany,media=ebook,cover=true"]
     #"uplatex,papersize,twoside,b5j,10pt,openright" # B5 10pt 右起こし
     #"uplatex,papersize,twoside,b5j,10pt,openany"   # B5 10pt 両起こし
     #"uplatex,papersize,twoside,a5j,9pt,openright"  # A5  9pt 右起こし
     #"uplatex,papersize,twoside,a5j,9pt,openany"    # A5  9pt 両起こし
     #"uplatex,papersize,oneside,a5j,10pt,openany"   # A5 10pt 両起こし（タブレット向け）
-    "uplatex,papersize,oneside,b5j,10pt,openany"
-]
+
 #
 # LaTeX用のコマンドを指定する
 # texcommand: "uplatex"
@@ -334,7 +338,7 @@ pdfmaker:
   # TeXコンパイル前に実行するプログラム。変換後のTeXソースを調整したいときに使用する。
   # 渡される引数1=作業用展開ディレクトリ、引数2=呼び出しを実行したディレクトリ
   # hook_beforetexcompile: null
-  hook_beforetexcompile: [lib/hooks/beforetexcompile.rb]
+  # hook_beforetexcompile: [lib/hooks/beforetexcompile.rb]
   #
   # TeXコンパイル後に実行するプログラム。索引作業をして再度コンパイルしたいときなどに使用する。
   # 渡される引数1=作業用展開ディレクトリ、引数2=呼び出しを実行したディレクトリ
@@ -351,8 +355,10 @@ pdfmaker:
   colophon: true
   #
   # 表紙に配置し、書籍の影絵にも利用する画像ファイル。同人誌の印刷では一般的に、表紙は本文と別ファイルにするので、ここはnullにする。
-  coverimage: null
+  coverimage: rails_textbook_cover_omote.png
   #
+  # PDF用裏表紙ファイル
+  backcover: cover_ura.tex
   # pdfmaker:階層を使うものはここまで
 
 ## @chapref<>{} や @<hd>{} で、章(Chapter)や節(Section)へのリンクを作成
