--- a/_review/config.yml
+++ b/_review/config.yml
@@ -31,8 +31,8 @@ subtitle: |-
 
 # 著者名。「, 」で区切って複数指定できる
 # 読みを入れる例 aut: [{name: "青木峰郎", file-as: "アオキミネロウ"}, {name: "武藤健志", file-as: "ムトウケンシ"}, {name: "高橋征義", file-as: "タカハシマサヨシ"}, {name: "角征典", file-as: "カドマサノリ"}]
-aut: ["五十嵐邦明 ガーネットテック373株式会社 / twitter: igaiga555"]
-dsr: ["becolomochi / twitter: becolomochi"]
+aut: ["五十嵐邦明 ガーネットテック373株式会社 / X: igaiga555"]
+dsr: ["becolomochi / X: becolomochi"]
 pbl: Ruby超入門オブジェクトさんファンクラブ
 prt: 日光企画
 
@@ -73,16 +73,16 @@ prt: 日光企画
 # a-trl, trl: 翻訳者
 
 # 刊行日(省略した場合は実行時の日付)
-date: 2023-05-11
+date: 2025-07-22
 # 発行年月。YYYY-MM-DD形式による配列指定。省略した場合はdateを使用する
 # 複数指定する場合は次のように記述する
 # [["初版第1刷の日付", "初版第2刷の日付"], ["第2版第1刷の日付"]]
 # 日付の後ろを空白文字で区切り、任意の文字列を置くことも可能。
-history: [["2023-05-11 v2.2.0 Ruby 3.2.2 Rails 7.0.4.3 RubyKaigi2023, 技術書典14", "2022-09-10 v2.1.3 技術書典13", "2022-03-23 v2.1.2 達人出版会", "2022-01-22 v2.1.0 Ruby 3.1.0 Rails 7.0.1 技術書典12", "2020-02-29 v2.0.0 Ruby 2.7.0 Rails 6.0.2.1 技術書典8", "2017-08-20 v1.2.0 Ruby 2.4.1 Rails 5.1.2", "2016-07-26 v1.0.0 Ruby 2.3.1 Rails 5.0.0", "2016-03-31 v0.9.0 Ruby 2.3.0 Rails 5.0.0beta3 初版"]]
+history: [["2025-07-22 v2.3.0 Ruby 3.4.2 Rails 8.0.2", "2023-05-11 v2.2.0 Ruby 3.2.2 Rails 7.0.4.3 RubyKaigi2023, 技術書典14", "2022-01-22 v2.1.0 Ruby 3.1.0 Rails 7.0.1 技術書典12, 技術書典13", "2020-02-29 v2.0.0 Ruby 2.7.0 Rails 6.0.2.1 技術書典8", "2017-08-20 v1.2.0 Ruby 2.4.1 Rails 5.1.2", "2016-07-26 v1.0.0 Ruby 2.3.1 Rails 5.0.0", "2016-03-31 v0.9.0 Ruby 2.3.0 Rails 5.0.0beta3 初版"]]
 # [experimental] 新刊を頒布したイベント名（例：「技術書典6（2019年春）新刊」）
-pubevent_name: 技術書典12
+pubevent_name: 技術書典
 # 権利表記(配列で複数指定可)
-rights: (C) 2016-2023 五十嵐邦明, becolomochi
+rights: (C) 2016-2025 五十嵐邦明, becolomochi
 # description: 説明
 # subject: 短い説明用タグ(配列で複数指定可)
 # type: 書籍のカテゴリーなど(配列で複数指定可)
